🐛 Fixing bug: Buttons, icon alignment

--- a/src/styles/objects/buttons.css
+++ b/src/styles/objects/buttons.css
@@ -20,9 +20,6 @@
 }
 
 :--buttons-icon {
-    & span[class*="text"] {
-        vertical-align: middle;
-    }
 
     & i[class*="o-icon"] {
         font-size: 1.5em;
